@@ -33,12 +33,9 @@ public class QueryJob extends Job {
 	/**
 	 * Create a new job.
 	 * 
-	 * @param id
-	 *            of the job.
-	 * @param item
-	 *            on which the query will run.
-	 * @param query
-	 *            the query which will run.
+	 * @param id    of the job.
+	 * @param item  on which the query will run.
+	 * @param query the query which will run.
 	 */
 	public QueryJob(int id, IBrowseItem item, String query, int maxDisplay) {
 		super("Query_" + id);
@@ -50,35 +47,27 @@ public class QueryJob extends Job {
 
 	@Override
 	protected IStatus run(IProgressMonitor monitor) {
-		XQueryService service;
-
 		// notify listener about query start
 		QueryNotifier.getInstance().start(new QueryStartEvent(_id));
 		long tCompiled = 0;
-
 		try {
-			ResourceSet result;
-			service = (XQueryService) _item.getCollection().getService(
-					"XQueryService", "1.0");
+			XQueryService service = (XQueryService) _item.getCollection().getService("XQueryService", "1.0");
 			service.setProperty(OutputKeys.INDENT, "yes");
 
 			long t0 = System.currentTimeMillis();
 			CompiledExpression compiled = service.compile(_query);
 			long t1 = System.currentTimeMillis();
 			tCompiled = t1 - t0;
-			result = service.execute(compiled);
+			ResourceSet result = service.execute(compiled);
 			long tResult = System.currentTimeMillis() - t1;
 
 			ResourceIterator i = result.getIterator();
 			QueryResultEvent queryResultEvent = null;
 
-			monitor.beginTask("Retrieving results...", new Long(result
-					.getSize()).intValue());
-			while (i.hasMoreResources() && !monitor.isCanceled()
-					&& count < _maxDisplay) {
+			monitor.beginTask("Retrieving results...", Long.valueOf(result.getSize()).intValue());
+			while (i.hasMoreResources() && !monitor.isCanceled() && count < _maxDisplay) {
 				Resource r = i.nextResource();
-				queryResultEvent = new QueryResultEvent(_id, (String) r
-						.getContent());
+				queryResultEvent = new QueryResultEvent(_id, (String) r.getContent());
 
 				// notify listener about query result
 				QueryResultNotifier.getInstance().addResult(queryResultEvent);
@@ -87,16 +76,11 @@ public class QueryJob extends Job {
 			}
 
 			// notify listener about query end
-			QueryNotifier.getInstance()
-					.end(
-							new QueryEndEvent(_id, result.getSize(), tCompiled,
-									tResult));
+			QueryNotifier.getInstance().end(new QueryEndEvent(_id, result.getSize(), tCompiled, tResult));
 
 		} catch (Exception e) {
-			QueryNotifier.getInstance().end(
-					new QueryEndEvent(_id, tCompiled, e));
-			return new Status(IStatus.ERROR, QueryPlugin.getId(),
-					"Failure while running queries", e);
+			QueryNotifier.getInstance().end(new QueryEndEvent(_id, tCompiled, e));
+			return new Status(IStatus.ERROR, QueryPlugin.getId(), "Failure while running queries", e);
 		} finally {
 			monitor.done();
 		}
